@@ -17,9 +17,4 @@
 	<?php echo CHtml::encode($data->role); ?>
 	<br />
 
-	<b><?php echo CHtml::encode($data->getAttributeLabel('password')); ?>:</b>
-	<?php echo CHtml::encode($data->password); ?>
-	<br />
-
-
 </div>
